--- a/bio-and-agri-zero.html
+++ b/bio-and-agri-zero.html
@@ -36,7 +36,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="full-header transparent-header dark" data-sticky-class="not-dark">
+		<header id="header" class="full-header transparent-header light" data-sticky-class="not-dark">
 			<div id="header-wrap">
 				<div class="container">
 					<div class="header-row">
@@ -72,11 +72,14 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
+                                <li class="menu-item">
+									<a class="menu-link" href="design-space.html"><div>design space</div></a>
+								</li>
 								<li class="menu-item">
-									<a class="menu-link" href="Modules.html"><div>Modules</div></a>
+									<a class="menu-link" href="Modules.html"><div>modules</div></a>
 								</li>
 								<li class="menu-item mega-menu">
-									<a class="menu-link" href="about.html"><div>About</div></a>
+									<a class="menu-link" href="about.html"><div>about</div></a>
 								</li>
 							</ul>
 
@@ -91,7 +94,13 @@
 			</div>
 			<div class="header-wrap-clone"></div>
 		</header><!-- #header end -->
+        <section id="slider" class="slider-element min-vh-100 dark include-header">
+			<div class="slider-inner" style="background-image: url(images/Headers/bio-and-agri-zero-header.svg);background-position: 50% 0;">
 
+				<div class="container">
+				</div>
+			</div>
+		</section>
 		<!-- Page Title
 		============================================= -->
 		
